add JWT and asp.net core identity

--- a/src/API/HR.LeaveManagement.Api/appsettings.json
+++ b/src/API/HR.LeaveManagement.Api/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "HrLeaveManagementConnectionString": "Server=127.0.0.1,1433;Database=HrLeaveManagement;User Id=sa;Password=P@ssword123;"
+    "HrLeaveManagementConnectionString": "Server=127.0.0.1,1433;Database=HrLeaveManagement;User Id=sa;Password=P@ssword123;",
+    "HrLeaveManagementIdentityConnectionString": "Server=127.0.0.1,1433;Database=HrLeaveManagementIdentity;User Id=sa;Password=P@ssword123;"
   },
   "EmailSettings": {
     "ApiKey": "SENDGRID_KEY_HERE",
@@ -14,5 +15,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "A7D403B7F7EC489AA31D8AEB41AAE9D0",
+    "Issuer": "HrLeaveManagement",
+    "Audience": "HrLeaveManagementUser",
+    "DurationInMinutes": 60
+  }
 }
