add auth and jwt

--- a/src/UI/HR.LeaveManagement.Mvc/HR.LeaveManagement.Mvc.csproj
+++ b/src/UI/HR.LeaveManagement.Mvc/HR.LeaveManagement.Mvc.csproj
@@ -18,5 +18,6 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="LocalStorage" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
   </ItemGroup>
 </Project>
